# oibvh

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cmake/: Findassimp.cmake
include/: camera.h  shader.h  utils.h
include/cpu/: deviceCode.h  simpleBVH.h  simpleCollide.h
include/cuda/: collide.cuh  oibvh.cuh  oibvhTree.cuh  optixCollide.cuh  scene.cuh  transform.cuh  utils.cuh
include/utils/: mesh.h  model.h  shader.h  utils.h
ptx/: deviceCode.cu
shaders/: mesh_fragment_shader.glsl  temp_fragment_shader.glsl  temp_vertex_shader.glsl
src/: camera.cpp  main.cpp  mesh.cpp  model.cpp  shader.cpp
src/cpu/: simpleBVH.cpp  simpleCollide.cpp
src/cuda/: collide.cu  oibvh.cu  oibvhTree.cu  optixCollide.cu  scene.cu  transform.cu
src/utils/: camera.cpp  mesh.cpp  model.cpp  shader.cpp  utils.cpp
third/: CMakeLists.txt
third/gProximity/: cuda_intersect_tritri.h
third/glad/: CMakeLists.txt
third/glad/include/glad/: glad.h
third/glad/src/: glad.c
third/glfw/: CMakeLists.txt
third/glfw/lib/: glfw3.lib
third/imgui/: CMakeLists.txt
